force-app/main/default/objects/TechIP_Assignment__c/TechIP_Assignment__c.object-meta.xml
<CustomObject>
    <label>TechIP Assignment</label>
    <nameField>
        <displayFormat>TA-{000000}</displayFormat>
        <label>TechIPAssignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TechIP Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>