force-app/main/default/objects/TechIP_Assignment__c/fields/Assignee__c.field-meta.xml
<CustomField>
    <fullName>Assignee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignee</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TIP_Assignment_Assignee</relationshipName>
    <type>Lookup</type>
</CustomField>