force-app/main/default/objects/TechIP_Assignment__c/fields/Assignor__c.field-meta.xml
<CustomField>
    <fullName>Assignor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>TIP_Assignment_Assignor</relationshipName>
    <type>Lookup</type>
</CustomField>