force-app/main/default/objects/TechIP_Assignment__c/fields/TIP_Transaction__c.field-meta.xml
<CustomField>
    <fullName>TIP_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TIP Transaction</label>
    <referenceTo>TechIP_Transaction__c</referenceTo>
    <relationshipName>TIP_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>